🐞 fix(ui): Fix `WidgetCheckbox` icon misalignment

--- a/packages/abm-ui/src/components/widgets/checkbox/index.styl
+++ b/packages/abm-ui/src/components/widgets/checkbox/index.styl
@@ -22,8 +22,8 @@
 
 svg
 	padding 2px
-	width 18px
-	height 18px
+	width 100%
+	height 100%
 	transition .1s stroke-dashoffset
 	stroke var(--theme-text)
 	stroke-linecap round
